--- a/NodeProject/server/package.json
+++ b/NodeProject/server/package.json
@@ -6,7 +6,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "nodemon server.mjs"
   },
   "keywords": [],
   "author": "",
@@ -17,5 +17,8 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "http": "^0.0.1-security"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.0"
   }
 }
