--- a/NodeProject/server/package.json
+++ b/NodeProject/server/package.json
@@ -15,8 +15,10 @@
     "@apollo/server": "^4.7.4",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "http": "^0.0.1-security"
+    "http": "^0.0.1-security",
+    "mongoose": "^7.4.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.0"
