--- a/NodeProject/server/package.json
+++ b/NodeProject/server/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "firebase-admin": "^11.10.1",
+    "graphql-upload": "^16.0.2",
     "http": "^0.0.1-security",
     "mongoose": "^7.4.1"
   },
