--- a/NodeProject/server/package.json
+++ b/NodeProject/server/package.json
@@ -13,14 +13,18 @@
   "license": "ISC",
   "dependencies": {
     "@apollo/server": "^4.7.4",
+    "@graphql-tools/schema": "^10.0.0",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "firebase-admin": "^11.10.1",
+    "graphql-subscriptions": "^2.0.0",
     "graphql-upload": "^16.0.2",
+    "graphql-ws": "^5.14.0",
     "http": "^0.0.1-security",
-    "mongoose": "^7.4.1"
+    "mongoose": "^7.4.1",
+    "ws": "^8.13.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.0"
