--- a/NodeProject/server/package.json
+++ b/NodeProject/server/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "firebase-admin": "^11.10.1",
+    "graphql": "^16.8.0",
     "graphql-subscriptions": "^2.0.0",
     "graphql-upload": "^16.0.2",
     "graphql-ws": "^5.14.0",
